// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Pf4SelectWrapper /> should render correctly 1`] = `
<Pf4SelectWrapper
  FieldProvider={[Function]}
  id="bazz"
  input={
    Object {
      "name": "bazz",
      "onChange": [MockFunction],
      "value": "",
    }
  }
  meta={Object {}}
  options={
    Array [
      Object {
        "label": "Foo",
        "value": "bar",
      },
    ]
  }
>
  <FormGroup
    fieldId="bazz"
    isValid={true}
  >
    <div
      className="pf-c-form__group"
    >
      <Select
        FieldProvider={[Function]}
        id="bazz"
        input={
          Object {
            "name": "bazz",
            "onChange": [MockFunction],
            "value": "",
          }
        }
        isValid={true}
        options={
          Array [
            Object {
              "label": "Foo",
              "value": "bar",
            },
          ]
        }
      >
        <FormSelect
          className=""
          id="bazz"
          isDisabled={false}
          isRequired={false}
          isValid={true}
          name="bazz"
          onBlur={[Function]}
          onChange={[MockFunction]}
          onFocus={[Function]}
          value=""
        >
          <select
            aria-invalid={false}
            className="pf-c-form-control"
            disabled={false}
            id="bazz"
            name="bazz"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            value=""
          >
            <FormSelectOption
              key="None"
              label="None"
            >
              <option
                className=""
                disabled={false}
                value=""
              >
                None
              </option>
            </FormSelectOption>
            <FormSelectOption
              key="bar"
              label="Foo"
              value="bar"
            >
              <option
                className=""
                disabled={false}
                value="bar"
              >
                Foo
              </option>
            </FormSelectOption>
          </select>
        </FormSelect>
      </Select>
    </div>
  </FormGroup>
</Pf4SelectWrapper>
`;

exports[`<Pf4SelectWrapper /> should render correctly in error state 1`] = `
<Pf4SelectWrapper
  FieldProvider={[Function]}
  id="bazz"
  input={
    Object {
      "name": "bazz",
      "onChange": [MockFunction],
      "value": "",
    }
  }
  meta={
    Object {
      "error": "Error",
      "touched": true,
    }
  }
  options={
    Array [
      Object {
        "label": "Foo",
        "value": "bar",
      },
    ]
  }
>
  <FormGroup
    fieldId="bazz"
    helperTextInvalid="Error"
    isValid={false}
  >
    <div
      className="pf-c-form__group"
    >
      <Select
        FieldProvider={[Function]}
        id="bazz"
        input={
          Object {
            "name": "bazz",
            "onChange": [MockFunction],
            "value": "",
          }
        }
        isValid={false}
        options={
          Array [
            Object {
              "label": "Foo",
              "value": "bar",
            },
          ]
        }
      >
        <FormSelect
          className=""
          id="bazz"
          isDisabled={false}
          isRequired={false}
          isValid={false}
          name="bazz"
          onBlur={[Function]}
          onChange={[MockFunction]}
          onFocus={[Function]}
          value=""
        >
          <select
            aria-invalid={true}
            className="pf-c-form-control"
            disabled={false}
            id="bazz"
            name="bazz"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            value=""
          >
            <FormSelectOption
              key="None"
              label="None"
            >
              <option
                className=""
                disabled={false}
                value=""
              >
                None
              </option>
            </FormSelectOption>
            <FormSelectOption
              key="bar"
              label="Foo"
              value="bar"
            >
              <option
                className=""
                disabled={false}
                value="bar"
              >
                Foo
              </option>
            </FormSelectOption>
          </select>
        </FormSelect>
      </Select>
      <div
        aria-live="polite"
        className="pf-c-form__helper-text pf-m-error"
        id="bazz-helper"
      >
        Error
      </div>
    </div>
  </FormGroup>
</Pf4SelectWrapper>
`;

exports[`<Pf4SelectWrapper /> should render correctly with description 1`] = `
<Pf4SelectWrapper
  FieldProvider={[Function]}
  description="description"
  id="bazz"
  input={
    Object {
      "name": "bazz",
      "onChange": [MockFunction],
      "value": "",
    }
  }
  meta={Object {}}
  options={
    Array [
      Object {
        "label": "Foo",
        "value": "bar",
      },
    ]
  }
>
  <FormGroup
    fieldId="bazz"
    isValid={true}
  >
    <div
      className="pf-c-form__group"
    >
      <TextContent>
        <div
          className="pf-c-content"
        >
          <Text
            component="small"
          >
            <small
              className=""
              data-pf-content={true}
            >
              description
            </small>
          </Text>
        </div>
      </TextContent>
      <Select
        FieldProvider={[Function]}
        id="bazz"
        input={
          Object {
            "name": "bazz",
            "onChange": [MockFunction],
            "value": "",
          }
        }
        isValid={true}
        options={
          Array [
            Object {
              "label": "Foo",
              "value": "bar",
            },
          ]
        }
      >
        <FormSelect
          className=""
          id="bazz"
          isDisabled={false}
          isRequired={false}
          isValid={true}
          name="bazz"
          onBlur={[Function]}
          onChange={[MockFunction]}
          onFocus={[Function]}
          value=""
        >
          <select
            aria-invalid={false}
            className="pf-c-form-control"
            disabled={false}
            id="bazz"
            name="bazz"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            required={false}
            value=""
          >
            <FormSelectOption
              key="None"
              label="None"
            >
              <option
                className=""
                disabled={false}
                value=""
              >
                None
              </option>
            </FormSelectOption>
            <FormSelectOption
              key="bar"
              label="Foo"
              value="bar"
            >
              <option
                className=""
                disabled={false}
                value="bar"
              >
                Foo
              </option>
            </FormSelectOption>
          </select>
        </FormSelect>
      </Select>
    </div>
  </FormGroup>
</Pf4SelectWrapper>
`;
